// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketView /> should have the hidden classes 1`] = `
<div
  class="outerView"
>
  <div
    class="view"
  >
    <div>
      TicketHeaderWrapper
    </div>
    <div
      class="page transition out fade right"
    >
      <div
        class="ticketContent"
        tabindex="1"
      >
        <div>
          TicketBody
        </div>
      </div>
      <div
        class="mt-3"
      >
        <div
          class="component"
          style="display: none;"
        >
          <span
            class="name"
          >
            Customer
          </span>
          <div
            class="wrapper"
          >
            <span>
               is typing
            </span>
            <span
              class="dot1"
            >
              .
            </span>
            <span
              class="dot2"
            >
              .
            </span>
            <span
              class="dot3"
            >
              .
            </span>
          </div>
        </div>
        <div
          class="d-print-none container"
        >
          <form
            id="ticket-reply-editor"
          >
            <div
              class="replyChannel"
            >
              <div
                class="container"
              >
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdownToggle dropdown-toggle btn btn-"
                    type="button"
                  >
                    <i
                      class="icon source-icon d-inline-block material-icons md-2"
                    >
                      email
                    </i>
                  </button>
                  <div
                    aria-hidden="true"
                    class="dropdown-menu"
                    role="menu"
                    tabindex="-1"
                  >
                    <button
                      class="dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <i
                        class="icon source-icon d-inline-block material-icons"
                      >
                        email
                      </i>
                      Email
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="sourceLabel mt-1"
              >
                Internal note
              </div>
            </div>
            <div>
              ReplyForm
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketView /> should not have the hidden classes 1`] = `
<div
  class="outerView"
>
  <div
    class="view"
  >
    <div>
      TicketHeaderWrapper
    </div>
    <div
      class="page"
    >
      <div
        class="ticketContent"
        tabindex="1"
      >
        <div>
          TicketBody
        </div>
      </div>
      <div
        class="mt-3"
      >
        <div
          class="component"
          style="display: none;"
        >
          <span
            class="name"
          >
            Customer
          </span>
          <div
            class="wrapper"
          >
            <span>
               is typing
            </span>
            <span
              class="dot1"
            >
              .
            </span>
            <span
              class="dot2"
            >
              .
            </span>
            <span
              class="dot3"
            >
              .
            </span>
          </div>
        </div>
        <div
          class="d-print-none container"
        >
          <form
            id="ticket-reply-editor"
          >
            <div
              class="replyChannel"
            >
              <div
                class="container"
              >
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdownToggle dropdown-toggle btn btn-"
                    type="button"
                  >
                    <i
                      class="icon source-icon d-inline-block material-icons md-2"
                    >
                      email
                    </i>
                  </button>
                  <div
                    aria-hidden="true"
                    class="dropdown-menu"
                    role="menu"
                    tabindex="-1"
                  >
                    <button
                      class="dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <i
                        class="icon source-icon d-inline-block material-icons"
                      >
                        email
                      </i>
                      Email
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="sourceLabel mt-1"
              >
                Internal note
              </div>
            </div>
            <div>
              ReplyForm
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
